# HurdyGurdy-Core-Firmware

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  checkformat.sh  configure.sh  doxyfile  format.sh  run-tests.sh
.github/workflows/: BuildCheck.yml
hal/: CMakeLists.txt  hal_gpio.cpp  hal_gpio.h  status_led.h  tusb_config.h  usb_interface.hpp
hal/src/: CMakeLists.txt  hal_gpio.cpp  status_led.cpp  tusb_descriptors.cpp  usb_interface.cpp
src/: CMakeLists.txt  FreeRTOSConfig.h  FreeRTOS_hooks.c  extra.cpp  extra.hpp  hal_status_led.cpp  hal_status_led.h  main.cpp  status_led.cpp  status_led.h
templates/: c_c++_header.hpp_template  c_c++_src.cpp_template
test/: CMakeLists.txt  test_unity_config.cpp
test/extra_tests/: CMakeLists.txt  test_extra.c
test/fake_hal/: CMakeLists.txt  fake_hal_gpio.cpp  hal_gpio.cpp  hal_gpio.h
test/status_led_tests/: CMakeLists.txt  status_led_tests.c
test/test_runners/: test_unity_config_runner.cpp
test/unity_framework_tests/: CMakeLists.txt  test_unity_framework.c
